k8s/voting-result/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-result
  labels:
    app: voting-result
spec:
  replicas: 1
  selector:
    matchLabels:
      app: voting-result
  template:
    metadata:
      labels:
        app: voting-result
    spec:
      containers:
        - name: voting-result
          image: udarawick/voting-result:latest
          ports:
            - containerPort: 3000
