k8s/voting-result/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-result
  labels:
    app: voting-result
spec:
  type: NodePort
  selector:
    app: voting-result
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30030
