k8s/voting-result/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-result-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /results(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: voting-result
                port:
                  number: 3000
